--- a/biografia.html
+++ b/biografia.html
@@ -22,7 +22,7 @@
             <div class="nav okayNav" id="nav-main">
                 <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="bio.html" class="active">Un poco sobre mí</a></li>
+                <li><a href="biografia.html" class="active">Un poco sobre mí</a></li>
                 <li><a href="portfolio.html">Mis trabajos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
                 </ul>
