--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
             <div class="nav okayNav" id="nav-main">
                 <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="bio.html">Un poco sobre mí</a></li>
+                <li><a href="biografia.html">Un poco sobre mí</a></li>
                 <li><a href="portfolio.html">Mis trabajos</a></li>
                 <li><a href="contacto.html" class="active">Contacto</a></li>
                 </ul>
