--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="nav okayNav" id="nav-main">
                 <ul>
                 <li><a href="index.html" class="active">Inicio</a></li>
-                <li><a href="bio.html">Un poco sobre mí</a></li>
+                <li><a href="biografia.html">Un poco sobre mí</a></li>
                 <li><a href="portfolio.html">Mis trabajos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
                 </ul>
